--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.1",
-    "react-transition-group": "^2.2.1"
+    "react-motion": "^0.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
